Add top statistics API
